/*
Copyright 2021 The tKeel Authors.
Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at
        http://www.apache.org/licenses/LICENSE-2.0
Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

syntax = "proto3";

package io.tkeel.rudder.api.profile.v1;

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/tkeel-io/tkeel/api/profile/v1;v1";


service Profile {
  rpc GetTenantProfile(GetTenantProfileRequest)returns(GetTenantProfileResponse){
    option (google.api.http) = {
      get : "/profile"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary : "获取平台租户配置"
      operation_id : "GetTenantProfile"
      tags : "profile"
      responses : [ {
        key : "200"
        value : {description : "OK"}
      } ]
    };
  }

  rpc SetTenantPluginProfile(SetTenantPluginProfileRequest)returns(SetTenantPluginProfileResponse){
    option (google.api.http) = {
      post : "/profile"
      body : "body"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary : "设置平台租户配置"
      operation_id : "SetTenantProfile"
      tags : "profile"
      responses : [ {
        key : "200"
        value : {description : "OK"}
      } ]
    };
  };
}

message GetTenantProfileRequest {
  string tenant_id = 1;
}
message GetTenantProfileResponse {
  repeated TenantProfiles tenant_profiles = 1;
}
message TenantProfiles {
  string plugin_id = 1;
  bytes profiles = 2;
}

message SetTenantPluginProfileRequest {
  string tenant_id = 1;
  TenantProfiles body = 3;
}

message SetTenantPluginProfileResponse {

}

